--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -13,7 +13,16 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+    _instanceof:
+        App\Shared\Domain\Bus\Query\QueryHandler:
+            tags:
+                - { name: 'messenger.message_handler', bus: 'query.bus' }
+                - { name: 'app.query_handler' }
 
+        App\Shared\Domain\Bus\Command\CommandHandler:
+            tags:
+                - { name: 'messenger.message_handler', bus: 'command.bus' }
+                - { name: 'app.command_handler' }
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -21,3 +30,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Shared\Infrastructure\Bus\Command\InMemoryCommandBus:
+        arguments: [ !tagged_iterator app.command_handler ]
+    App\Shared\Infrastructure\Bus\Query\InMemoryQueryBus:
+        arguments: [ !tagged_iterator app.query_handler ]
