--- a/backend/composer.json
+++ b/backend/composer.json
@@ -28,6 +28,7 @@
         "symfony/yaml": "7.4.*"
     },
     "require-dev": {
+        "fakerphp/faker": "^1.24",
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^12.4",
         "symfony/maker-bundle": "^1.65",
