feat(backend) : mise à jour environnement + implémentation BDD et entité Route

--- a/backend/.env.test
+++ b/backend/.env.test
@@ -1,3 +1,8 @@
 # define your env variables for the test env here
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
+APP_ENV=test
+APP_DEBUG=true
+DATABASE_URL="mysql://root:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}?charset=utf8mb4"
+TEST_TOKEN=""
+
