--- a/backend/config/packages/doctrine.yaml
+++ b/backend/config/packages/doctrine.yaml
@@ -7,6 +7,11 @@ doctrine:
         #server_version: '16'
 
         profiling_collect_backtrace: '%kernel.debug%'
+        types:
+            #RouteIdType
+            route_id: App\Route\Infrastructure\Doctrine\Type\RouteIdType
+            #AnalyticCodeType
+            analytic_code: App\Route\Infrastructure\Doctrine\Type\AnalyticCodeType
     orm:
         validate_xml_mapping: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
@@ -14,12 +19,12 @@ doctrine:
             Doctrine\DBAL\Platforms\PostgreSQLPlatform: identity
         auto_mapping: true
         mappings:
-            #App:
-            #    type: attribute
-            #    is_bundle: false
-            #    dir: '%kernel.project_dir%/src/Entity'
-            #    prefix: 'App\Entity'
-            #    alias: App
+            Route:
+                type: attribute
+                is_bundle: false
+                dir: '%kernel.project_dir%/src/Route/Infrastructure/Doctrine/Mapping'
+                prefix: 'App\Route\Infrastructure\Doctrine\Mapping'
+                alias: Route
         controller_resolver:
             auto_mapping: false
 
