--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./backend:/var/www/html
+    env_file:
+      - ./.env
     networks:
       - web
       - backend
@@ -76,7 +78,6 @@ services:
       db:
         condition: service_healthy
 
-
   # Nginx (serveur web pour le backend)
   nginx:
     image: nginx:1.23-alpine
@@ -84,7 +85,7 @@ services:
       - php
     volumes:
       - ./backend:/var/www/html:ro
-      - ./backend/docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+      #- ./backend/docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
     labels:
       - "traefik.enable=true"
 
@@ -110,12 +111,13 @@ services:
   db:
     image: mariadb:10.6
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: symfony
-      MYSQL_USER: symfony
-      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - db_data:/var/lib/mysql
+      - ./backend/docker/init-tests.sql:/docker-entrypoint-initdb.d/init-tests.sql:ro
     networks:
       - backend
     restart: unless-stopped
