feat(back) : gestion des users

--- a/backend/.env
+++ b/backend/.env
@@ -42,3 +42,6 @@ DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}?
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
+JWT_SECRET_KEY=jwt/private.pem
+JWT_PUBLIC_KEY=jwt/public.pem
+JWT_PASSPHRASE=
