--- a/backend/config/packages/doctrine.yaml
+++ b/backend/config/packages/doctrine.yaml
@@ -12,6 +12,12 @@ doctrine:
             route_id: App\Route\Infrastructure\Doctrine\Type\RouteIdType
             #AnalyticCodeType
             analytic_code: App\Route\Infrastructure\Doctrine\Type\AnalyticCodeType
+            # UserIdType
+            user_id: App\Security\Infrastructure\Doctrine\Type\UserIdType
+            # EmailType
+            email: App\Security\Infrastructure\Doctrine\Type\EmailType
+            # HashedPasswordType
+            hashed_password: App\Security\Infrastructure\Doctrine\Type\HashedPasswordType
     orm:
         validate_xml_mapping: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
@@ -25,6 +31,12 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Route/Infrastructure/Doctrine/Mapping'
                 prefix: 'App\Route\Infrastructure\Doctrine\Mapping'
                 alias: Route
+            Security:
+                type: attribute
+                is_bundle: false
+                dir: '%kernel.project_dir%/src/Security/Infrastructure/Doctrine/Mapping'
+                prefix: 'App\Security\Infrastructure\Doctrine\Mapping'
+                alias: Security
         controller_resolver:
             auto_mapping: false
 
