--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^3.1",
         "doctrine/doctrine-migrations-bundle": "^3.7",
         "doctrine/orm": "^3.5",
+        "firebase/php-jwt": "^6.11",
         "lambdish/phunctional": "^2.1",
         "symfony/console": "7.4.*",
         "symfony/dotenv": "7.4.*",
