--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -23,6 +23,9 @@ services:
             tags:
                 - { name: 'messenger.message_handler', bus: 'command.bus' }
                 - { name: 'app.command_handler' }
+
+        App\Shared\Domain\Bus\Event\DomainEventSubscriber:
+            tags: [ 'app.domain_event_subscriber' ]
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -44,3 +47,13 @@ services:
         arguments:
             $distancesFile: '%kernel.project_dir%/public/data/distances.json'
             $stationRepo: '@App\Route\Infrastructure\Repository\JsonStationRepository'
+
+    App\Security\Infrastructure\EventSubscriber\MiddlewareSubscriber:
+        arguments:
+            $accessTokenDecoder: '@App\Security\Domain\Service\AccessTokenDecoder'
+
+    App\Security\Infrastructure\Service\JWTAccessToken:
+        arguments:
+            $privateKeyPath: '%kernel.project_dir%/config/%env(JWT_SECRET_KEY)%'
+            $publicKeyPath: '%kernel.project_dir%/config/%env(JWT_PUBLIC_KEY)%'
+            $passphrase: '%env(JWT_PASSPHRASE)%'
