--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - "traefik.http.routers.frontend-router.rule=Host(`app.defifullstack.com`)"
       - "traefik.http.routers.frontend-router.entrypoints=websecure"
       - "traefik.http.routers.frontend-router.tls=true"
+      - "traefik.http.routers.frontend-router.tls.stores=default"
       - "traefik.http.routers.frontend-router.service=frontend-service"
 
       # Router HTTP -> HTTPS
@@ -68,8 +69,6 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./backend:/var/www/html
-    env_file:
-      - ./.env
     networks:
       - web
       - backend
@@ -85,7 +84,7 @@ services:
       - php
     volumes:
       - ./backend:/var/www/html:ro
-      #- ./backend/docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./backend/docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
     labels:
       - "traefik.enable=true"
 
@@ -117,7 +116,6 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - db_data:/var/lib/mysql
-      - ./backend/docker/init-tests.sql:/docker-entrypoint-initdb.d/init-tests.sql:ro
     networks:
       - backend
     restart: unless-stopped
