--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,54 +1,12 @@
-FROM php:8.4-fpm-alpine
+FROM dunglas/frankenphp:latest
 
-# Extensions et outils nécessaires
-RUN apk add --no-cache \
-    git \
-    icu-dev \
-    oniguruma-dev \
-    libzip-dev \
-    zlib-dev \
-    libpng-dev \
-    libxml2-dev \
-    bash \
-    curl \
-    openssl \
-    npm \
-    nodejs \
-    mariadb-client \
-    && docker-php-ext-install \
-        pdo \
-        pdo_mysql \
-        intl \
-        mbstring \
-        zip \
-        opcache
-
-# Configuration PHP : OPCache
-RUN { \
-        echo 'opcache.memory_consumption=128'; \
-        echo 'opcache.interned_strings_buffer=8'; \
-        echo 'opcache.max_accelerated_files=4000'; \
-        echo 'opcache.revalidate_freq=2'; \
-        echo 'opcache.fast_shutdown=1'; \
-        echo 'opcache.enable_cli=1'; \
-    } > /usr/local/etc/php/conf.d/opcache-recommended.ini
-
-# Configuration PHP : limites
-RUN { \
-        echo 'memory_limit=256M'; \
-        echo 'upload_max_filesize=100M'; \
-        echo 'post_max_size=100M'; \
-        echo 'max_execution_time=300'; \
-    } > /usr/local/etc/php/conf.d/custom.ini
+RUN install-php-extensions pdo_mysql intl zip opcache
 
 # Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-WORKDIR /var/www/html
+WORKDIR /app
+COPY ./ /app
 
-# Entrypoint
-COPY entrypoint.sh /usr/local/bin/entrypoint.sh
-RUN chmod +x /usr/local/bin/entrypoint.sh
-
-ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
-CMD ["php-fpm"]
+# Installer les dépendances Composer depuis le bon répertoire
+RUN composer install --no-interaction --optimize-autoloader
