--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   # Frontend
   frontend:
@@ -10,101 +12,36 @@ services:
       - ./frontend/vite.config.ts:/app/vite.config.ts
     environment:
       - VITE_API_BASE_URL=https://api.defifullstack.com
-    command: npm run dev
-    labels:
-      - "traefik.enable=true"
-
-      # Router HTTPS pour le frontend
-      - "traefik.http.routers.frontend-router.rule=Host(`app.defifullstack.com`)"
-      - "traefik.http.routers.frontend-router.entrypoints=websecure"
-      - "traefik.http.routers.frontend-router.tls=true"
-      - "traefik.http.routers.frontend-router.tls.stores=default"
-      - "traefik.http.routers.frontend-router.service=frontend-service"
-
-      # Router HTTP -> HTTPS
-      - "traefik.http.routers.frontend-router-http.rule=Host(`app.defifullstack.com`)"
-      - "traefik.http.routers.frontend-router-http.entrypoints=web"
-      - "traefik.http.routers.frontend-router-http.middlewares=redirect-https"
-
-      - "traefik.http.services.frontend-service.loadbalancer.server.port=5173"
-    networks:
-      - web
-    restart: unless-stopped
-
-  traefik:
-    image: traefik:v2.10
-    command:
-      - --log.level=DEBUG
-      - --accesslog=true
-      - --api.dashboard=true
-      - --api.insecure=true
-      - --providers.docker=true
-      - --providers.docker.exposedbydefault=false
-      - --providers.file.directory=/etc/traefik/dynamic
-      - --entrypoints.web.address=:80
-      - --entrypoints.websecure.address=:443
+    command: npm run dev -- --host 0.0.0.0
     ports:
-      - "80:80"
-      - "443:443"
-      - "8080:8080"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./certs:/certs:ro
-      - ./traefik:/etc/traefik/dynamic:ro
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.dashboard.rule=Host(`traefik.defifullstack.com`)"
-      - "traefik.http.routers.dashboard.entrypoints=web"
-      - "traefik.http.routers.dashboard.service=api@internal"
-      - "traefik.http.middlewares.redirect-https.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.redirect-https.redirectscheme.permanent=true"
+      - "5173:5173" # exposer le port pour Traefik
     networks:
       - web
     restart: unless-stopped
 
-  # Backend PHP
-  php:
+  # Backend FrankenPHP
+  backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    volumes:
-      - ./backend:/var/www/html
-    networks:
-      - web
-      - backend
-    restart: unless-stopped
-    depends_on:
-      db:
-        condition: service_healthy
-
-  # Nginx (serveur web pour le backend)
-  nginx:
-    image: nginx:1.23-alpine
-    depends_on:
-      - php
-    volumes:
-      - ./backend:/var/www/html:ro
-      - ./backend/docker/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+    environment:
+      - SERVER_NAME=:8000
     labels:
       - "traefik.enable=true"
-
-      # Router HTTPS
-      - "traefik.http.routers.api-router.rule=Host(`api.defifullstack.com`)"
-      - "traefik.http.routers.api-router.entrypoints=websecure"
-      - "traefik.http.routers.api-router.tls=true"
-      - "traefik.http.routers.api-router.service=api-service"
-
-      # Router HTTP -> HTTPS
-      - "traefik.http.routers.api-router-http.rule=Host(`api.defifullstack.com`)"
-      - "traefik.http.routers.api-router-http.entrypoints=web"
-      - "traefik.http.routers.api-router-http.middlewares=redirect-https"
-
-      # Service
-      - "traefik.http.services.api-service.loadbalancer.server.port=80"
+      - "traefik.http.routers.backend.rule=Host(`api.defifullstack.com`)"
+      - "traefik.http.routers.backend.entrypoints=websecure"
+      - "traefik.http.routers.backend.tls=true"
+      - "traefik.http.services.backend.loadbalancer.server.port=8000"
+      - "traefik.http.routers.backend-http.rule=Host(`api.defifullstack.com`)"
+      - "traefik.http.routers.backend-http.entrypoints=web"
+      - "traefik.http.routers.backend-http.middlewares=redirect-https"
+    ports:
+      - "8000:8000" # exposer le port pour Traefik
     networks:
       - web
-      - backend
     restart: unless-stopped
+    depends_on:
+      - db
 
   # Base de données
   db:
@@ -117,7 +54,7 @@ services:
     volumes:
       - db_data:/var/lib/mysql
     networks:
-      - backend
+      - web
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
@@ -126,11 +63,31 @@ services:
       retries: 5
       start_period: 30s
 
+  # Traefik en statique (sans Docker provider)
+  traefik:
+    image: traefik:v2.10
+    command:
+      - --log.level=DEBUG
+      - --accesslog=true
+      - --api.dashboard=true
+      - --api.insecure=true
+      - --entrypoints.web.address=:80
+      - --entrypoints.websecure.address=:443
+      - --providers.file.directory=/etc/traefik/dynamic
+    ports:
+      - "80:80"
+      - "443:443"
+      - "8080:8080"
+    volumes:
+      - ./traefik:/etc/traefik/dynamic:ro
+      - ./certs:/certs:ro
+    networks:
+      - web
+    restart: unless-stopped
+
 volumes:
   db_data:
 
 networks:
   web:
-    driver: bridge
-  backend:
     driver: bridge
