--- a/backend/config/packages/api_platform.yaml
+++ b/backend/config/packages/api_platform.yaml
@@ -9,7 +9,7 @@ api_platform:
     mapping:
         paths:
             - '%kernel.project_dir%/src/Route/UI/Http/Rest/'
-
+            - '%kernel.project_dir%/src/Security/UI/Http/Rest/'
     formats:
         json: [ 'application/json' ]
         jsonld: [ 'application/ld+json' ]
