--- a/backend/config/packages/doctrine.yaml
+++ b/backend/config/packages/doctrine.yaml
@@ -18,6 +18,9 @@ doctrine:
             email: App\Security\Infrastructure\Doctrine\Type\EmailType
             # HashedPasswordType
             hashed_password: App\Security\Infrastructure\Doctrine\Type\HashedPasswordType
+            #RolesType
+            roles: App\Security\Infrastructure\Doctrine\Type\RolesType
+
     orm:
         validate_xml_mapping: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
