feat(back) : optmisation des tests et création de fixtures

--- a/backend/.env.test
+++ b/backend/.env.test
@@ -3,6 +3,6 @@ KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 APP_ENV=test
 APP_DEBUG=true
-DATABASE_URL="mysql://root:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}?charset=utf8mb4"
+DATABASE_TEST_URL="mysql://root:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}?charset=utf8mb4"
 TEST_TOKEN=""
 
