--- a/backend/config/packages/doctrine.yaml
+++ b/backend/config/packages/doctrine.yaml
@@ -46,6 +46,7 @@ doctrine:
 when@test:
     doctrine:
         dbal:
+            url: '%env(resolve:DATABASE_TEST_URL)%'
             # "TEST_TOKEN" is typically set by ParaTest
             dbname_suffix: '_test%env(default::TEST_TOKEN)%'
 
