feat(back) : optimisation des tests et gestion des exception + ajout documentation api

--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -57,3 +57,7 @@ services:
             $privateKeyPath: '%kernel.project_dir%/config/%env(JWT_SECRET_KEY)%'
             $publicKeyPath: '%kernel.project_dir%/config/%env(JWT_PUBLIC_KEY)%'
             $passphrase: '%env(JWT_PASSPHRASE)%'
+
+    App\Shared\UI\Http\Rest\ApiExceptionListener:
+       tags:
+        -   { name: kernel.event_listener, event: kernel.exception }
