--- a/backend/composer.json
+++ b/backend/composer.json
@@ -35,6 +35,8 @@
         "fakerphp/faker": "^1.24",
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^12.4",
+        "symfony/browser-kit": "7.4.*",
+        "symfony/http-client": "7.4.*",
         "symfony/maker-bundle": "^1.65",
         "symfony/var-dumper": "7.4.*"
     },
