--- a/backend/composer.json
+++ b/backend/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^3.5",
         "firebase/php-jwt": "^6.11",
         "lambdish/phunctional": "^2.1",
+        "nelmio/cors-bundle": "^2.6",
         "symfony/console": "7.4.*",
         "symfony/dotenv": "7.4.*",
         "symfony/flex": "^2",
