feat(back): ajout Phpstan + règles

--- a/backend/phpstan.dist.neon
+++ b/backend/phpstan.dist.neon
@@ -1,5 +1,11 @@
 parameters:
     level: 6
     paths:
-        - src/
+        - src
+    excludePaths:
 
+
+rules:
+    - App\Phpstan\Rules\Application\NoInfrastructureInApplicationRule
+    - App\Phpstan\Rules\Domain\NoApplicationInDomainRule
+    - App\Phpstan\Rules\Domain\NoInfrastructureInDomainRule
