--- a/backend/composer.json
+++ b/backend/composer.json
@@ -34,7 +34,9 @@
         "dama/doctrine-test-bundle": "*",
         "doctrine/doctrine-fixtures-bundle": "*",
         "fakerphp/faker": "^1.24",
+        "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-beberlei-assert": "^2.0",
         "phpunit/phpunit": "^12.4",
         "symfony/browser-kit": "7.4.*",
         "symfony/http-client": "7.4.*",
@@ -44,6 +46,7 @@
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
+            "phpstan/extension-installer": true,
             "symfony/flex": true,
             "symfony/runtime": true
         },
