feat(back) : mise en place ci-cd

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,14 @@ jobs:
           extensions: pdo_mysql, intl, zip, opcache
           coverage: xdebug
 
+      - name: Copy env file
+        run: cp .env.example .env
+
       - name: Install Composer deps
         run: composer install --no-interaction --prefer-dist --no-scripts
 
-      - name: Validate composer.json
-        run: composer validate --strict
+      - name: Run Doctrine migrations (optional)
+        run: php bin/console doctrine:migrations:migrate -n
 
       - name: Run PHPUnit with coverage
         run: |
