feat(back) : mise en place ci-cd

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,38 +2,45 @@ name: CI-CD
 
 on:
   push:
-    branches: [ 'main' ]
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
   backend-tests:
-    name: Backend - Tests & Coverage
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: backend
+    strategy:
+      matrix:
+        php-version: [ '8.2', '8.3', '8.4' ]
+
+    services:
+      mysql:
+        image: mariadb:10.6
+        env:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: symfony_test
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.4'
-          extensions: pdo_mysql, intl, zip, opcache
+          php-version: ${{ matrix.php-version }}
+          extensions: ctype, iconv, pdo, pdo_mysql
           coverage: xdebug
+          tools: composer:v2
 
-      - name: Copy env file
-        run: cp .env.example .env
-
-      - name: Install Composer deps
-        run: composer install --no-interaction --prefer-dist --no-scripts
-
-      - name: Run Doctrine migrations (optional)
-        run: php bin/console doctrine:migrations:migrate -n
-
-      - name: Run PHPUnit with coverage
-        run: |
-            XDEBUG_MODE=coverage ./vendor/bin/phpunit \
-              --coverage-html coverage
+      - name: Get composer cache directory
+        id: composer-cache
+        working-directory: ./backend
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
