feat(back) : mise en place ci-cd

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,3 +51,14 @@ jobs:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install dependencies
+        working-directory: ./backend
+        run: composer install --prefer-dist --no-progress --no-interaction
+
+      - name: Wait for MySQL
+        run: |
+          until mysqladmin ping -h127.0.0.1 -P3306 -uroot -ppassword --silent; do
+            echo 'waiting for mysql...'
+            sleep 2
+          done
