--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,9 @@ jobs:
           coverage: xdebug
           tools: composer:v2
 
+      - name: Copy env file
+        run: cp .env.example .env
+
       - name: Get composer cache directory
         id: composer-cache
         working-directory: ./backend
