--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,3 +62,8 @@ jobs:
             echo 'waiting for mysql...'
             sleep 2
           done
+      - name: Run PHPUnit tests
+        working-directory: ./backend
+        env:
+          DATABASE_URL: mysql://root:password@127.0.0.1:3306/symfony_test?serverVersion=mariadb-10.6.24
+        run: ./vendor/bin/phpunit --coverage-text
